[tool.poetry]
name = "Saga"
version = "0.1.1"
description = ""
authors = ["Patrick Rachford <prachford@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.4.3"
flask = {extras = ["async"], version = "^3.0.3"}

[tool.poetry.group.dev.dependencies]
temporalio = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = [{cmd = "ruff check --fix ."}]
lint = [{cmd = "ruff check ./*.py"}]


[tool.ruff]
lint.select = ["E", "F"]
line-length = 120
fix = true